--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,13 @@
   <version>1.0-SNAPSHOT</version>
   <name>flextree</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.6.2</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
