--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,24 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.4.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>org.klortho.flextree.TestJackson</mainClass>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
