--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>org.klortho.flextree.TestJackson</mainClass>
+          <mainClass>org.klortho.flextree.Tester</mainClass>
         </configuration>
       </plugin>
     </plugins>
