--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 
   <build>
     <plugins>
+
+      <!-- This plugin provides the `exec:java` target -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
@@ -37,9 +39,26 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>org.klortho.flextree.TestJackson</mainClass>
+          <mainClass>org.klortho.flextree.Flextree</mainClass>
         </configuration>
       </plugin>
+
+      <!-- This plugin generates a complete executable jar, that includes
+        all dependencies, when you execute `assembly:single` -->
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>org.klortho.flextree.Flextree</mainClass>
+            </manifest>
+          </archive>
+            <finalName>flextree</finalName>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+      </plugin> 
     </plugins>
   </build>
 </project>
